k8s/frontend-deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: oraph/frontend:1
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: frontend-config
              mountPath: /app/dist/config.js
              subPath: config.js
      volumes:
        - name: frontend-config
          configMap:
            name: frontend-config

---

apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: frontend
